# minimax-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
src/minimax_tts/: __init__.py  cli.py  client.py  config.py  mcp_server.py  voices.py
