[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimax-tts"
version = "0.1.0"
description = "🎙️ AI Voice Generator — MiniMax TTS CLI with 100+ voices in 40 languages, WebSocket streaming, MCP support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Max Hou", email = "houxyue@hotmail.com"},
]
keywords = [
    "minimax", "tts", "text-to-speech", "voice", "speech", "audio",
    "chinese-tts", "chinese-voice", "text-to-speech-api", "ai-voice",
    "voice-cloning", "voice-generation", "speech-synthesis", "aigc",
    "cli", "tool", "python", "mcp", "cursor", "claude-code", "agent-tools",
    "elevenlabs-alternative", "openai-tts-alternative"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "websockets>=12.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]

[project.urls]
Homepage = "https://github.com/MaxHou-infinity/minimax-tts"
Documentation = "https://github.com/MaxHou-infinity/minimax-tts#readme"
Issues = "https://github.com/MaxHou-infinity/minimax-tts/issues"

[project.scripts]
minimax-tts = "minimax_tts.cli:main"
minimax-tts-mcp = "minimax_tts.mcp_server:main"
